This file documents the revision history for mod_gearman.

1.1.2  ...
          - added uniq key option for check_gearman (kgovande)

1.1.1  Thu Nov 10 11:15:48 CET 2011
          - check_gearman can now send background jobs (Justin Kerr Sheckler)
          - fixed problem which skipped some checks when they were rescheduled
            by the core smart scheduler
          - use md5sum as uniq key for long host/servicesnames
            this fixes a possible lost jobs when 2 very long host/servicesnames
            are scheduled at the same time

1.1.0  Wed Oct 12 18:36:10 CEST 2011
          - fixed send_multi performance data headers
          - fixed segfault when worker runs into timeout

1.0.10 Thu Aug 25 16:07:55 CEST 2011
          - new option 'show_error_output' for worker
          - fixed failed job when host+service > 64 chars
          - fixed tests

1.0.9  Mon Aug 15 16:05:23 CEST 2011
          - nicer error messages for send_multi when zero results transmitted
          - fixed sigsegv when reloading core in combination with exports options
          - added optional workaround for plugins exiting with rc 25 because
            of duplicate execution
          - removed version output to stderr while reloading/starting the core
          - check server definition for duplicates
          - replace died workers to maintain the worker population
          - better timeout handling when using fork_on_exec=off

1.0.8  Fri Jul 22 22:21:34 CEST 2011
          - use identifier for error messages if set
          - fixed ld options (fixes debian bug #632431) thanks Ilya Barygin
          - fixed memory leak in gearman_top
          - fixed memory leak when reloading neb module

1.0.7  Sun Jul  3 15:18:16 CEST 2011
          - show plugin output for exit codes > 3
          - fixed send_multi timestamps when client clock is screwed
          - fixed send_multi for libgearman > 0.14

1.0.6  Sat Jun  4 11:47:02 CEST 2011